# iStock

./: .env.example  .gitattributes  .gitignore  .gitmessage_zh  .pre-commit-config.yaml  CLEAR_INSTRUCTIONS.md  DATA_ACCURACY_PLAN.md  DEVELOPMENT_PLAN.md  Dockerfile.backend  Dockerfile.frontend  FRONTEND_INSTALL_GUIDE.md  IMMEDIATE_DEVELOPMENT_PLAN.md  LICENSE  MIGRATION_OK.txt  Makefile  NEXT_PHASE_PLAN.md  README.md  REAL_TEST_SUMMARY.md  RUN_ME.txt  START_FRONTEND_GUIDE.md  TEST_PLAN_NEXT_STEPS.md  USER.md  WEEK3_PLAN.md  automated_monitor.py  backfill_data.py  backfill_data.sql  batch_backfill.py  check_database.py  check_db.py  check_postgres.bat  check_pymysql.py  check_table.bat  check_table.py  check_table2.bat  cleanup_project.py  configure_mysql.bat  continue_development.py  create_minimal_frontend.bat  direct_mysql_backfill.py  docker-compose-fixed.yml  (+82 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.openclaw/: workspace-state.json
backend/: README.md  __init__.py  alembic.ini  pyproject.toml  requirements-dev.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py
backend/api/v1/: data_sources.py
backend/scripts/: db_migrate.py  init_database.py  seed_data.py  test_database.py
backend/services/: data_source_manager.py
backend/src/: main.py
backend/src/api/: __init__.py  auth.py  dependencies.py  portfolio.py  stocks.py  users.py
backend/src/api/endpoints/: data.py  portfolio.py  stocks.py  users.py
backend/src/database/: models.py  session_mysql.py
backend/src/schemas/: stock_schemas.py
backend/src/services/: __init__.py  data_service.py  portfolio_service.py  stock_service.py  user_service.py
backend/src/utils/: security.py  validators.py
backend/tests/: __init__.py  conftest.py  test_data_source_manager.py
docker/nginx/: nginx.conf
docker/postgres/: init.sql
docs/development/: GIT_BRANCH_MANAGEMENT.md  GIT_COMMIT_ZH.md
docs/guides/: AUTOMATED_MONITOR_SETUP.md  FIX_DOCKER_PATH.md  MANUAL_TEST_GUIDE.md  QUICK_FIX_GUIDE.md
docs/project/: PROGRESS_REPORT.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_1.md  WEEKLY_PLAN.md
docs/reports/: CODE_AUDIT_REPORT.md  CODE_COMPLETENESS_CHECKLIST.md  COMPLETE_DELIVERY_CHECKLIST.md  PUSH_MECHANISM_ANALYSIS.md  TEST_COMMIT_NOTIFICATION.md
frontend/: README.md  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/components/: Header.js  StockTable.js
frontend/src/contexts/: AuthContext.js
frontend/src/pages/: Dashboard.js  Stocks.js
frontend/src/services/: api.js
knowledge/: project_overview.md
local/: app.py  config.py  requirements.txt  run_local.bat  start_local.py
memory/: 2026-02-26.md  2026-02-28-stock-backfill-verification.md  daily-brief-state.json  feishu-to-windows-sync-state.json  windows-sync-state.json
scripts/: check_project.py  check_status.py  git_commit_notify.py  git_commit_notify_fixed.py  git_commit_notify_simple.py  init_repo.ps1  init_repo.sh  start_project.py  verify_docker.py
